<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSignUp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/adamina"
            android:text="User Sign Up "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30sp"
            android:src="@drawable/main_logo_without_text" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/adamina"
                android:text="Name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Ram Kumar Lama"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="Birth Date"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_birthdate_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="2012/2/2"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp"
                android:editable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="Contact"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_contact_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="9812345678"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Gender: "
                    android:layout_weight="3"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:checked="true"
                        android:text="Male"
                        android:fontFamily="@font/adamina"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="Female"
                        android:fontFamily="@font/adamina"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"

                        />

                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="Other"
                        android:fontFamily="@font/adamina"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"

                        />
                </RadioGroup>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="Address"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_address_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Kathmandu, Nepal"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="abc@gmail.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adamina"
                android:text="Password"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_password_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_user_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/adamina"
                android:text="SignUp"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_usersignup_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/adamina"
                android:layout_gravity="center"/>




        </LinearLayout>
    </ScrollView>

</LinearLayout>