...
                android:fontFamily="@font/adamina"
                android:text="Organization Name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_name_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Cotiviti Nepal"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
...

            <EditText
                android:id="@+id/ed_address_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Kathmandu, Nepal"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
...
