<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Org_Post_Job">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Post Job "
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/adamina"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30sp"
            android:src="@drawable/main_logo_without_text" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/adamina"
                android:text="Title"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_title_job_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Titile"
                android:textSize="13sp"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="Job Categoty"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />\
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="Job Type"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"                >
                <EditText
                    android:id="@+id/ed_job_category_job_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:hint="Job Categoty"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
                <Spinner
                    android:id="@+id/spinner_job_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:theme="@style/mySpinnerItemStyle"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="Location"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />\
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="Salary"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"                >
                <EditText
                    android:id="@+id/ed_job_location_job_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:hint="Location"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
                <EditText
                    android:id="@+id/ed_salary_job_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:hint="Salary"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="DeadLine"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />\
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="No of Vacancy"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"                >
                <TextView
                    android:id="@+id/tv_deadline_job_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:hint="2021/2/2"
                    android:layout_weight="1"
                    android:editable="false"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
                <EditText
                    android:id="@+id/ed_no_of_vacancy_job_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:text="0"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/adamina"
                android:text="Education Level"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_education_leveljob_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Education Level"
                android:textSize="13sp"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/adamina"
                android:text="Professional Skill"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_pro_skill_ob_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Professional Skill"
                android:textSize="13sp"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/adamina"
                android:text="Experience "
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_experience_job_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="Experience "
                android:textSize="13sp"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/adamina"
                android:text="Job Description	 "
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ed_job_description_job_post"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/adamina"
                android:hint="Job Description "
                android:textSize="13sp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />


            <Button
                android:id="@+id/btn_post_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post Job"
                android:textSize="15sp"
                android:fontFamily="@font/adamina"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>